Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Seerbit_Exception__c/Seerbit_Exception__c.object-meta.xml
<CustomObject>
    <label>Seerbit Exception</label>
    <nameField>
        <label>Record Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seerbit Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>