Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Seerbit_Exception__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>