Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Seerbit_Exception__c/fields/Govt_Limit_in_Executing_code__c.field-meta.xml
<CustomField>
    <fullName>Govt_Limit_in_Executing_code__c</fullName>
    <label>Govt Limit in Executing code</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>