Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Seerbit_Exception__c/fields/is_More_Than_30_days__c.field-meta.xml
<CustomField>
    <fullName>is_More_Than_30_days__c</fullName>
    <formula>DATEVALUE(CreatedDate)+1&lt;=TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is More Than 30 days?</label>
    <type>Checkbox</type>
</CustomField>