Salesforce_SeerBIt_PlugIn/force-app/main/default/objects/Seerbit_Exception__c/fields/MethodName__c.field-meta.xml
<CustomField>
    <fullName>MethodName__c</fullName>
    <label>MethodName</label>
    <type>TextArea</type>
</CustomField>